--- a/angularfire-start/firebase.json
+++ b/angularfire-start/firebase.json
@@ -13,7 +13,8 @@
       ],
       "frameworksBackend": {
         "region": "us-central1"
-      }
+      },
+      "target": "friendlychat"
     },
     {
       "target": "friendlychat",
